clear up and re-anrrenge code

--- a/src/html/parts/user-tasks-table.html
+++ b/src/html/parts/user-tasks-table.html
@@ -15,17 +15,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i> <h6 class="media-heading red darken-1">Запроси друга</h6></td>
+                    <td>
+                        <i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i>
+                        <h6 class="media-heading red darken-1">Запроси друга</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
                     </td>
                     <td class="text-xs-center font-small-2">2 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -40,17 +48,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-plus-square icon-bg-circle bg-info"></i> <h6 class="media-heading info darken-4">Додай декларацію</h6></td>
+                    <td>
+                        <i class="fa fa-plus-square icon-bg-circle bg-info"></i>
+                        <h6 class="media-heading info darken-4">Додай декларацію</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">15 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Ми все ще розшукуємо декларації за попередні роки</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Ми все ще розшукуємо декларації за попередні роки</p>
                     </td>
                     <td class="text-xs-center font-small-2">5 гривень</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 14 завданнь <progress class="progress progress-sm progress-primary mt-0 mb-0" value="14" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 14 завданнь <progress class="progress progress-sm progress-primary mt-0 mb-0" value="14" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -65,17 +81,24 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-puzzle-piece icon-bg-circle bg-yellow bg-darken-3"></i> <h6 class="media-heading yellow darken-2">Розшифруй декларацію</h6></td>
+                    <td>
+                        <i class="fa fa-puzzle-piece icon-bg-circle bg-yellow bg-darken-3"></i> <h6 class="media-heading yellow darken-2">Розшифруй декларацію</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">10 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
                     </td>
                     <td class="text-xs-center font-small-2">3 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 112 завданнь <progress class="progress progress-sm progress-yellow mt-0 mb-0" value="112" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 112 завданнь <progress class="progress progress-sm progress-yellow mt-0 mb-0" value="112" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -90,17 +113,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i> <h6 class="media-heading teal">Знайди гарну хату</h6></td>
+                    <td>
+                        <i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i>
+                        <h6 class="media-heading teal">Знайди гарну хату</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
                     </td>
                     <td class="text-xs-center font-small-2">10 гривень</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="garnahata")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="garnahata")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -115,17 +146,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i> <h6 class="media-heading red darken-1">Запроси друга</h6></td>
+                    <td>
+                        <i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i>
+                        <h6 class="media-heading red darken-1">Запроси друга</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
                     </td>
                     <td class="text-xs-center font-small-2">2 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -140,17 +179,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i> <h6 class="media-heading red darken-1">Запроси друга</h6></td>
+                    <td>
+                        <i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i>
+                        <h6 class="media-heading red darken-1">Запроси друга</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
                     </td>
                     <td class="text-xs-center font-small-2">2 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -165,17 +212,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-plus-square icon-bg-circle bg-info"></i> <h6 class="media-heading info darken-4">Додай декларацію</h6></td>
+                    <td>
+                        <i class="fa fa-plus-square icon-bg-circle bg-info"></i>
+                        <h6 class="media-heading info darken-4">Додай декларацію</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">15 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Ми все ще розшукуємо декларації за попередні роки</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Ми все ще розшукуємо декларації за попередні роки</p>
                     </td>
                     <td class="text-xs-center font-small-2">5 гривень</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 14 завданнь <progress class="progress progress-sm progress-primary mt-0 mb-0" value="14" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 14 завданнь <progress class="progress progress-sm progress-primary mt-0 mb-0" value="14" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -190,17 +245,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-puzzle-piece icon-bg-circle bg-yellow bg-darken-3"></i> <h6 class="media-heading yellow darken-2">Розшифруй декларацію</h6></td>
+                    <td>
+                        <i class="fa fa-puzzle-piece icon-bg-circle bg-yellow bg-darken-3"></i>
+                        <h6 class="media-heading yellow darken-2">Розшифруй декларацію</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">10 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
                     </td>
                     <td class="text-xs-center font-small-2">3 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 112 завданнь <progress class="progress progress-sm progress-yellow mt-0 mb-0" value="112" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 112 завданнь <progress class="progress progress-sm progress-yellow mt-0 mb-0" value="112" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="decl")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -215,17 +278,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i> <h6 class="media-heading teal">Знайди гарну хату</h6></td>
+                    <td>
+                        <i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i>
+                        <h6 class="media-heading teal">Знайди гарну хату</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
                     </td>
                     <td class="text-xs-center font-small-2">10 гривень</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="garnahata")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="garnahata")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -240,17 +311,25 @@
             <table class="table mb-0 borderless">
                 <tbody>
                 <tr>
-                    <td><i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i> <h6 class="media-heading red darken-1">Запроси друга</h6></td>
+                    <td>
+                        <i class="fa fa-user-plus icon-bg-circle bg-red bg-darken-1" aria-hidden="true"></i>
+                        <h6 class="media-heading red darken-1">Запроси друга</h6>
+                    </td>
                     <td class="text-xs-center font-small-2">5 балів</td>
                 </tr>
                 <tr>
-                    <td><p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
+                    <td>
+                        <p class="notification-text font-small-3 text-muted">Отримай 2 гривні за кожного запрошенного</p>
                     </td>
                     <td class="text-xs-center font-small-2">2 гривні</td>
                 </tr>
                 <tr>
-                    <td><span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span></td>
-                    <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a></td>
+                    <td>
+                        <span class="text-xs-center font-small-2">Виконано 52 завдання <progress class="progress progress-sm progress-danger mt-0 mb-0" value="52" max="100"></progress></span>
+                    </td>
+                    <td class="text-xs-center font-small-2">
+                        <a href="#" title="Канцелярська сотня"><!--(bake ../_svg-logo.html logo="wh100")--></a>
+                    </td>
                 </tr>
                 </tbody>
             </table>
