--- a/src/html/403.html
+++ b/src/html/403.html
@@ -3,56 +3,48 @@
 
 <!--(bake parts/head.html title="Доступ заборонено")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page error-page">
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
-    <div class="app-content content container-fluid">
-        <div class="content-wrapper">
-            <div class="content-header row">
-            </div>
-            <div class="content-body"><section class="flexbox-container">
-                <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1">
-                    <div class="card-header bg-transparent no-border pb-0">
-                        <h2 class="error-code text-xs-center mb-2">
-                            <img src="app-assets/images/pages/403.gif" />
-                        </h2>
-                        <h3 class="text-uppercase text-xs-center">Воу воу! Доступ заборонено!</h3>
-                    </div>
-                    <div class="card-body collapse in">
-                        <div class="row py-2">
-                            <div class="col-xs-12 col-sm-6 push-sm-3">
-                                <a href="index.html" class="btn btn-primary btn-block font-small-3"><i class="ft-home"></i> На головну</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card-footer bg-transparent pb-0">
-                        <div class="row">
-                            <p class="text-muted text-xs-center col-xs-12 py-1">© 2017 <a href="#">ЖВ </a></p>
-                            <div class="text-xs-center">
-                                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-facebook"><span class="fa fa-facebook"></span></a>
-                                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-twitter"><span class="fa fa-twitter"></span></a>
-                            </div>
+<body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page error-page">
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
+        <div class="content-header row">
+        </div>
+        <div class="content-body"><section class="flexbox-container">
+            <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1">
+                <div class="card-header bg-transparent no-border pb-0">
+                    <h2 class="error-code text-xs-center mb-2">
+                        <img src="/app-assets/images/pages/403.gif" />
+                    </h2>
+                    <h3 class="text-uppercase text-xs-center">Воу воу! Доступ заборонено!</h3>
+                </div>
+                <div class="card-body collapse in">
+                    <div class="row py-2">
+                        <div class="col-xs-12 col-sm-6 push-sm-3">
+                            <a href="index.html" class="btn btn-primary btn-block font-small-3"><i class="ft-home"></i> На головну</a>
                         </div>
                     </div>
                 </div>
-            </section>
-
+                <div class="card-footer bg-transparent pb-0">
+                    <div class="row">
+                        <p class="text-muted text-xs-center col-xs-12 py-1">© 2017 <a href="#">ЖВ </a></p>
+                        <div class="text-xs-center">
+                            <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-facebook"><span class="fa fa-facebook"></span></a>
+                            <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-twitter"><span class="fa fa-twitter"></span></a>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </section>
+
         </div>
     </div>
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
+</div>
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="../../../app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
+
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+<script src="/app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
+
+</body>
 </html>
