--- a/src/html/fund-page.html
+++ b/src/html/fund-page.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
 
-  <!--(bake parts/head.html title="Сторінка фонду")-->
+<!--(bake parts/head.html title="Сторінка фонду")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
+<body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
 
-    <!--(bake parts/navbar-top.html)-->
+<!--(bake parts/navbar-top.html)-->
 
-    <!--(bake parts/left-sidebar-menu-fund-page.html)-->
+<!--(bake parts/left-sidebar-menu-fund-page.html)-->
 
-    <div class="app-content content container-fluid">
-      <div class="content-wrapper">
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
         <div class="content-detached content-left">
             <div class="content-body">
                 <div class="row" id="user-profile">
@@ -21,7 +21,7 @@
                             <div class="media profil-cover-details">
                                 <div class="media-left pl-2 pt-2">
                                     <a href="#" class="profile-image">
-                                        <img src="../../../app-assets/images/logo/tablet-bigr.jpg" class="img-border height-100" alt="Card image">
+                                        <img src="/app-assets/images/logo/tablet-bigr.jpg" class="img-border height-100" alt="Card image">
                                     </a>
                                 </div>
                                 <div class="media-body media-middle row">
@@ -158,31 +158,27 @@
         </div>
 
         <div class="sidebar-detached sidebar-right">
-              <div class="sidebar">
-                  <!--(bake parts/fund-list.html title="Інші фонди")-->
-              </div>
-          </div>
-      </div>
+            <div class="sidebar">
+                <!--(bake parts/fund-list.html title="Інші фонди")-->
+            </div>
+        </div>
     </div>
+</div>
 
-    <!--(bake parts/footer.html)-->
+<!--(bake parts/footer.html)-->
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/extensions/toastr.min.js" type="text/javascript"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="../../../app-assets/js/scripts/charts/user-stats.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/scripts/extensions/toastr.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/extensions/toastr.min.js" type="text/javascript"></script>
 
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+<script src="/app-assets/js/scripts/extensions/toastr.js" type="text/javascript"></script>
+
+<!-- BEGIN very custom JS-->
+<script src="/assets/js/user-stats.js" type="text/javascript"></script>
+<!-- END very custom JS-->
+
+</body>
 </html>
