--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
-  <!--(bake parts/head.html title="Як допомогти? Головна сторінка")-->
+<!--(bake parts/head.html title="Як допомогти? Головна сторінка")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
+<body data-open="click" data-menu="vertical-menu" data-col="2-columns" class="vertical-layout vertical-menu 2-columns fixed-navbar logged-in">
 
-    <!--(bake parts/navbar-top.html)-->
+<!--(bake parts/navbar-top.html)-->
 
-    <!--(bake parts/left-sidebar-menu.html)-->
+<!--(bake parts/left-sidebar-menu.html)-->
 
-    <div class="app-content content container-fluid">
-      <div class="content-wrapper">
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
         <div class="content-detached content-left">
             <div class="content-body">
                 <div class="row">
@@ -26,17 +26,25 @@
                                         <table class="table mb-0 borderless">
                                             <tbody>
                                             <tr>
-                                                <td><i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i> <h6 class="media-heading teal">Знайди гарну хату</h6></td>
+                                                <td>
+                                                    <i class="fa fa-thumb-tack icon-bg-circle bg-teal"></i>
+                                                    <h6 class="media-heading teal">Знайди гарну хату</h6>
+                                                </td>
                                                 <td class="text-xs-center font-small-2">5 балів</td>
                                             </tr>
                                             <tr>
-                                                <td><p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
+                                                <td>
+                                                    <p class="notification-text font-small-3 text-muted">Розшифруй декларацію, та ми додамо її у базу</p>
                                                 </td>
                                                 <td class="text-xs-center font-small-2">10 гривень</td>
                                             </tr>
                                             <tr>
-                                                <td><span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span></td>
-                                                <td class="text-xs-center font-small-2"><a href="#" title="Канцелярська сотня"><!--(bake _svg-logo.html logo="garnahata")--></a></td>
+                                                <td>
+                                                    <span class="text-xs-center font-small-2">Виконано 5 завданнь <progress class="progress progress-sm progress-teal mt-0 mb-0" value="5" max="100"></progress></span>
+                                                </td>
+                                                <td class="text-xs-center font-small-2">
+                                                    <a href="#" title="Канцелярська сотня"><!--(bake _svg-logo.html logo="garnahata")--></a>
+                                                </td>
                                             </tr>
                                             </tbody>
                                         </table>
@@ -46,7 +54,9 @@
                         </div>
                         <div class="card" id="all-tasks-list">
                             <div class="card-header" id="user-tasks-table-controls">
-                                <h4 class="card-title"><span class="show-all table-controls">Всі завдання</span></h4>
+                                <h4 class="card-title">
+                                    <span class="show-all table-controls">Всі завдання</span>
+                                </h4>
                                 <a class="heading-elements-toggle"><i class="fa fa-ellipsis-v font-medium-3"></i></a>
                                 <div class="heading-elements">
                                     <ul class="list-inline mb-0">
@@ -83,7 +93,7 @@
                                     <div class="my-1 text-xs-center col-md-6 pl-0 pr-0">
                                         <div class="card-header mb-0 pt-0 pb-0">
                                             <h5 class="primary t tn">Виконано завдань</h5>
-                                            <h3 class="font-large-2 text-bold-200">210<!--<span class="font-medium-1 grey darken-1 text-bold-400"> шт.</span>--></h3>
+                                            <h3 class="font-large-2 text-bold-200">210</h3>
                                         </div>
                                         <div class="card-body">
                                             <input type="text" value="85" class="knob hide-value responsive angle-offset" data-angleOffset="40" data-thickness=".15" data-linecap="round" data-width="100" data-height="100" data-inputColor="#BABFC7" data-readOnly="true" data-fgColor="#00B5B8" data-knob-icon="icon-list">
@@ -168,10 +178,10 @@
                                             </div>
                                         </div>
                                         <div class="list-group list-group-flush user-badges-list">
-                                            <a href="#" class="list-group-item t tn col-md-6 pl-0 pr-0"><img src="../../../app-assets/images/badges/01.png" class="height-50 ib" alt="Card image"> <span>Я від Кононенка</span></a>
-                                            <a href="#" class="list-group-item t tn col-md-6 pr-0"><img src="../../../app-assets/images/badges/02.png" class="height-50 ib" alt="Card image"> <span>Рання пташка</span></a>
-                                            <a href="#" class="list-group-item t tn col-md-6 pl-0 pr-0"><img src="../../../app-assets/images/badges/03.png" class="height-50 ib" alt="Card image"> <span>Кльовий пацан</span></a>
-                                            <a href="#" class="list-group-item t tn col-md-6 pr-0"><img src="../../../app-assets/images/badges/04.png" class="height-50 ib" alt="Card image"> <span>Сумлінний декларант</span></a>
+                                            <a href="#" class="list-group-item t tn col-md-6 pl-0 pr-0"><img src="/app-assets/images/badges/01.png" class="height-50 ib" alt="Card image"> <span>Я від Кононенка</span></a>
+                                            <a href="#" class="list-group-item t tn col-md-6 pr-0"><img src="/app-assets/images/badges/02.png" class="height-50 ib" alt="Card image"> <span>Рання пташка</span></a>
+                                            <a href="#" class="list-group-item t tn col-md-6 pl-0 pr-0"><img src="/app-assets/images/badges/03.png" class="height-50 ib" alt="Card image"> <span>Кльовий пацан</span></a>
+                                            <a href="#" class="list-group-item t tn col-md-6 pr-0"><img src="/app-assets/images/badges/04.png" class="height-50 ib" alt="Card image"> <span>Сумлінний декларант</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -184,32 +194,28 @@
         </div>
 
         <div class="sidebar-detached sidebar-right">
-              <div class="sidebar">
-                  <!--(bake parts/fund-list.html title="Допоможи їм")-->
-              </div>
-          </div>
-      </div>
+            <div class="sidebar">
+                <!--(bake parts/fund-list.html title="Допоможи їм")-->
+            </div>
+        </div>
     </div>
+</div>
 
-    <!--(bake parts/footer.html)-->
+<!--(bake parts/footer.html)-->
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/tables/jquery.dataTables.min.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/tables/datatable/dataTables.bootstrap4.min.js" type="text/javascript"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="../../../app-assets/js/scripts/charts/user-stats.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/scripts/tables/datatables/datatables.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/charts/chart.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/extensions/jquery.knob.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/tables/jquery.dataTables.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/tables/datatable/dataTables.bootstrap4.min.js" type="text/javascript"></script>
 
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+<script src="/app-assets/js/scripts/tables/datatables/datatables.js" type="text/javascript"></script>
+
+<!-- BEGIN very custom JS-->
+<script src="/assets/js/user-stats.js" type="text/javascript"></script>
+<!-- END very custom JS-->
+
+</body>
 </html>
