--- a/src/html/recover-password.html
+++ b/src/html/recover-password.html
@@ -3,59 +3,52 @@
 
 <!--(bake parts/head.html title="Відновлення паролю")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page recover-password-page">
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
-    <div class="app-content content container-fluid">
-      <div class="content-wrapper">
+<body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column  blank-page blank-page recover-password-page">
+
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
         <div class="content-header row">
         </div>
-        <div class="content-body"><section class="flexbox-container">
-    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
-        <div class="card border-grey border-lighten-3 px-2 py-2 m-0">
-            <div class="card-header no-border pb-0">
-                <div class="card-title text-xs-center">
-                    <img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
-                </div>
-                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Ви отримаєте на свій email подальші інструкції</span></h6>
-            </div>
-            <div class="card-body collapse in">
-                <div class="card-block">
-                    <form class="form-horizontal" action="login.html" novalidate>
-                        <fieldset class="form-group position-relative has-icon-left">
-                            <input type="email" class="form-control form-control-lg input-lg" id="user-email" placeholder="Ваш email" required>
-                            <div class="form-control-position">
-                                <i class="ft-mail"></i>
+        <div class="content-body">
+            <section class="flexbox-container">
+                <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
+                    <div class="card border-grey border-lighten-3 px-2 py-2 m-0">
+                        <div class="card-header no-border pb-0">
+                            <div class="card-title text-xs-center">
+                                <img alt="stack admin logo" src="/app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
                             </div>
-                        </fieldset>
-                        <button type="submit" class="btn btn-outline-primary btn-lg btn-block"><i class="ft-unlock"></i> Відновити пароль</button>
-                    </form>
+                            <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Ви отримаєте на свій email подальші інструкції</span></h6>
+                        </div>
+                        <div class="card-body collapse in">
+                            <div class="card-block">
+                                <form class="form-horizontal" action="login.html" novalidate>
+                                    <fieldset class="form-group position-relative has-icon-left">
+                                        <input type="email" class="form-control form-control-lg input-lg" id="user-email" placeholder="Ваш email" required>
+                                        <div class="form-control-position">
+                                            <i class="ft-mail"></i>
+                                        </div>
+                                    </fieldset>
+                                    <button type="submit" class="btn btn-outline-primary btn-lg btn-block"><i class="ft-unlock"></i> Відновити пароль</button>
+                                </form>
+                            </div>
+                        </div>
+                        <div class="card-footer no-border">
+                            <p class="float-sm-left text-xs-center"><a href="login.html" class="card-link">Вхід</a></p>
+                            <p class="float-sm-right text-xs-center">Не зареєстровані? <a href="register.html" class="card-link">Зареєструватись</a></p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="card-footer no-border">
-                <p class="float-sm-left text-xs-center"><a href="login.html" class="card-link">Вхід</a></p>
-                <p class="float-sm-right text-xs-center">Не зареєстровані? <a href="register.html" class="card-link">Зареєструватись</a></p>
-            </div>
+            </section>
         </div>
     </div>
-</section>
+</div>
 
-        </div>
-      </div>
-    </div>
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="../../../app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+<script src="/app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
+
+</body>
 </html>
