--- a/src/html/register.html
+++ b/src/html/register.html
@@ -1,87 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
 
-    <!--(bake parts/head.html title="Реєстрація")-->
+<!--(bake parts/head.html title="Реєстрація")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-full-screen-image blank-page blank-page register-page">
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
-    <div class="app-content content container-fluid">
-      <div class="content-wrapper">
-        <div class="content-header row">
-        </div>
-        <div class="content-body"><section class="flexbox-container">
-    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
-        <div class="card border-grey border-lighten-3 px-1 py-1 m-0">
-            <div class="card-header no-border pb-0">
-                <div class="card-title text-xs-center">
-                    <img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
-                </div>
-                <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Швидка реєстрація</span></h6>
-            </div>
-            <div class="card-body collapse in">
-                <div class="text-xs-center">
-                    <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
-                    <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
-                </div>
-                <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>або за допомогою email</span></p>
-                <div class="card-block">
-                    <form class="form-horizontal" action="index.html" novalidate>
-                        <fieldset class="form-group position-relative has-icon-left">
-                            <input type="text" class="form-control" id="user-name" placeholder="Ваш логін">
-                            <div class="form-control-position">
-                                <i class="ft-user"></i>
+<body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-full-screen-image blank-page blank-page register-page">
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
+        <div class="content-header row"></div>
+        <div class="content-body">
+            <section class="flexbox-container">
+                <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
+                    <div class="card border-grey border-lighten-3 px-1 py-1 m-0">
+                        <div class="card-header no-border pb-0">
+                            <div class="card-title text-xs-center">
+                                <img alt="stack admin logo" src="/app-assets/images/logo/stack-logo.png" class="brand-logo"> Ж.В.
                             </div>
-                        </fieldset>
-                        <fieldset class="form-group position-relative has-icon-left">
-                            <input type="email" class="form-control" id="user-email" placeholder="Ваш email" required>
-                            <div class="form-control-position">
-                                <i class="ft-mail"></i>
+                            <h6 class="card-subtitle line-on-side text-muted text-xs-center font-small-3 pt-2"><span>Швидка реєстрація</span></h6>
+                        </div>
+                        <div class="card-body collapse in">
+                            <div class="text-xs-center">
+                                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
+                                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
                             </div>
-                        </fieldset>
-                        <fieldset class="form-group position-relative has-icon-left">
-                            <input type="password" class="form-control" id="user-password" placeholder="Ваш пароль" required>
-                            <div class="form-control-position">
-                                <i class="fa fa-key"></i>
+                            <p class="card-subtitle line-on-side text-muted text-xs-center font-small-3 mx-2 my-1"><span>або за допомогою email</span></p>
+                            <div class="card-block">
+                                <form class="form-horizontal" action="index.html" novalidate>
+                                    <fieldset class="form-group position-relative has-icon-left">
+                                        <input type="text" class="form-control" id="user-name" placeholder="Ваш логін">
+                                        <div class="form-control-position">
+                                            <i class="ft-user"></i>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="form-group position-relative has-icon-left">
+                                        <input type="email" class="form-control" id="user-email" placeholder="Ваш email" required>
+                                        <div class="form-control-position">
+                                            <i class="ft-mail"></i>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="form-group position-relative has-icon-left">
+                                        <input type="password" class="form-control" id="user-password" placeholder="Ваш пароль" required>
+                                        <div class="form-control-position">
+                                            <i class="fa fa-key"></i>
+                                        </div>
+                                    </fieldset>
+                                    <fieldset class="form-group row">
+                                        <div class="col-md-6 col-xs-12 text-xs-center text-sm-left">
+                                            <fieldset>
+                                                <input type="checkbox" id="remember-me" class="chk-remember">
+                                                <label for="remember-me"> Запам'ятати мене</label>
+                                            </fieldset>
+                                        </div>
+                                        <div class="col-md-6 col-xs-12 float-sm-left text-xs-center text-sm-right"><a href="recover-password.html" class="card-link">Забули пароль?</a></div>
+                                    </fieldset>
+                                    <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-user"></i> Реєстрація</button>
+                                </form>
                             </div>
-                        </fieldset>
-                        <fieldset class="form-group row">
-                            <div class="col-md-6 col-xs-12 text-xs-center text-sm-left">
-                                <fieldset>
-                                    <input type="checkbox" id="remember-me" class="chk-remember">
-                                    <label for="remember-me"> Запам'ятати мене</label>
-                                </fieldset>
+                            <div class="card-block">
+                                <a href="login.html" class="btn btn-outline-danger btn-block"><i class="ft-unlock"></i> Вхід</a>
                             </div>
-                            <div class="col-md-6 col-xs-12 float-sm-left text-xs-center text-sm-right"><a href="recover-password.html" class="card-link">Забули пароль?</a></div>
-                        </fieldset>
-                        <button type="submit" class="btn btn-outline-primary btn-block"><i class="ft-user"></i> Реєстрація</button>
-                    </form>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-block">
-                    <a href="login.html" class="btn btn-outline-danger btn-block"><i class="ft-unlock"></i> Вхід</a>
-                </div>
-            </div>
+            </section>
+
         </div>
     </div>
-</section>
+</div>
 
-        </div>
-      </div>
-    </div>
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
+<script src="/app-assets/vendors/js/forms/icheck/icheck.min.js" type="text/javascript"></script>
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/forms/validation/jqBootstrapValidation.js" type="text/javascript"></script>
-    <script src="../../../app-assets/vendors/js/forms/icheck/icheck.min.js" type="text/javascript"></script>
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <script src="../../../app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+<script src="/app-assets/js/scripts/forms/form-login-register.js" type="text/javascript"></script>
+
+</body>
 </html>
