--- a/src/html/under-maintenance.html
+++ b/src/html/under-maintenance.html
@@ -1,51 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" data-textdirection="ltr" class="loading">
 
-  <!--(bake parts/head.html title="Сервіс на обслуговуванні. Ми скоро повернемось. Дякуємо за розуміння")-->
+<!--(bake parts/head.html title="Сервіс на обслуговуванні. Ми скоро повернемось. Дякуємо за розуміння")-->
 
-  <body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-maintenance-image blank-page blank-page offline-page">
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
-    <div class="app-content content container-fluid">
-      <div class="content-wrapper">
+<body data-open="click" data-menu="vertical-menu" data-col="1-column" class="vertical-layout vertical-menu 1-column bg-maintenance-image blank-page blank-page offline-page">
+<div class="app-content content container-fluid">
+    <div class="content-wrapper">
         <div class="content-header row">
         </div>
-        <div class="content-body"><section class="flexbox-container">
-    <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
-        <div class="card border-grey border-lighten-3 px-1 py-1 box-shadow-3">
-            <div class="card-block">
-                <span class="card-title text-xs-center">
-        			<img alt="stack admin logo" src="app-assets/images/logo/stack-logo.png" class="img-fluid mx-auto d-block pt-2" >
-        		</span>
-            </div>
-            <div class="card-block text-xs-center">
-                <h3>Вибачте. Сервіс тимчасово не доступний</h3>
-                <p>Дякуємо за ваше терпіння.
-                    <br> Ми повернемось дуже швидко.</p>
-                <div class="mt-2"><i class="fa fa-cog spinner font-large-2"></i></div>
-            </div>
-            <hr>
-            <p class="socialIcon card-text text-xs-center pt-2 pb-2">
-                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
-                <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
-            </p>
+        <div class="content-body">
+            <section class="flexbox-container">
+                <div class="col-md-4 offset-md-4 col-xs-10 offset-xs-1 box-shadow-2 p-0">
+                    <div class="card border-grey border-lighten-3 px-1 py-1 box-shadow-3">
+                        <div class="card-block">
+                            <span class="card-title text-xs-center">
+                                <img alt="stack admin logo" src="/app-assets/images/logo/stack-logo.png" class="img-fluid mx-auto d-block pt-2" >
+                            </span>
+                        </div>
+                        <div class="card-block text-xs-center">
+                            <h3>Вибачте. Сервіс тимчасово не доступний</h3>
+                            <p>Дякуємо за ваше терпіння.
+                                <br> Ми повернемось дуже швидко.</p>
+                            <div class="mt-2"><i class="fa fa-cog spinner font-large-2"></i></div>
+                        </div>
+                        <hr>
+                        <p class="socialIcon card-text text-xs-center pt-2 pb-2">
+                            <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-facebook"><span class="fa fa-facebook"></span></a>
+                            <a href="#" class="btn btn-social-icon mr-1 mb-1 btn-outline-twitter"><span class="fa fa-twitter"></span></a>
+                        </p>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
-</section>
-        </div>
-      </div>
-    </div>
-    <!-- ////////////////////////////////////////////////////////////////////////////-->
+</div>
 
-    <!-- BEGIN VENDOR JS-->
-    <script src="../../../app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
-    <!-- BEGIN VENDOR JS-->
-    <!-- BEGIN PAGE VENDOR JS-->
-    <!-- END PAGE VENDOR JS-->
-    <!-- BEGIN STACK JS-->
-    <script src="../../../app-assets/js/core/app-menu.js" type="text/javascript"></script>
-    <script src="../../../app-assets/js/core/app.js" type="text/javascript"></script>
-    <!-- END STACK JS-->
-    <!-- BEGIN PAGE LEVEL JS-->
-    <!-- END PAGE LEVEL JS-->
-  </body>
+<script src="/app-assets/vendors/js/vendors.min.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app-menu.js" type="text/javascript"></script>
+<script src="/app-assets/js/core/app.js" type="text/javascript"></script>
+
+</body>
 </html>
